src/test/testFiles/valid/arrayContains.manimdsl
let a = Array<number>(3);
a.contains(1);