src/test/testFiles/invalid/semanticErrors/listsSwapMethod.manimdsl
let x = List<number>(3, 10);
x.swap(1, 2);